dark mode word-count color fix

--- a/django_project/staticfiles/css/main.css
+++ b/django_project/staticfiles/css/main.css
@@ -761,6 +761,9 @@ button a:hover {
 /* =============
    Misc Styles
 ============= */
+.word-count {
+  color: var(--secondary-color)
+}
 
 .post-text {
   width: 100%;
